[add] 2020-12-26 column-post-1

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -608,11 +608,15 @@ footer {
   min-height: 420px;
   margin-top: 100px;
 }
-#about h3 {
+#about h2 {
   margin: 40px 0 20px 0;
 }
+#about h3 {
+  margin: 20px 0 20px 0;
+}
 #about p {
-  margin-bottom: 20px;
+  padding-left: 1rem;
+  margin: 20px 0 20px 0;
 }
 .about-icons {
   font-size: 36px;
