--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -102,6 +102,7 @@ body {
 #site-logo {
   font-size: 19.5px;
   font-weight: 700;
+  color: rgb(67, 228, 145);
 }
 #search-box {
   position: relative;
@@ -609,18 +610,103 @@ footer {
   margin-top: 100px;
 }
 #about h2 {
-  margin: 40px 0 20px 0;
+  padding-bottom: 10px;
+  margin: 150px 0 20px 0;
+  border-bottom: 1px solid rgb(67, 228, 145);
+}
+#about h2::before {
+  content: "";
+  margin-right: 0.5rem;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid rgb(67, 228, 145);
+  border-left: 10px solid rgb(67, 228, 145);
+}
+.fire-blog {
+  border-bottom: 2px solid #cccccc;
+}
+.fire-blog h2 {
+  margin-top: 20px !important;
 }
 #about h3 {
-  margin: 20px 0 20px 0;
-}
-#about p {
   padding-left: 1rem;
   margin: 20px 0 20px 0;
+}
+#about h4 {
+  padding-left: 1rem;
+  margin: 20px 0 20px 0;
+}
+#about p{
+  padding-left: 1rem;
+  margin: 20px 0 20px 0;
+}
+#about ul {
+  padding-left: 1rem;
+  margin: 20px 0 20px 0;
+  list-style-position: inside;
 }
 .about-icons {
   font-size: 36px;
   margin: 20px 0;
+}
+.about-card-style {
+  display: flex;
+  margin-bottom: 60px;
+}
+.about-card-style .theme-text {
+  width: 50%;
+}
+.about-page-image {
+  width: 400px;
+  height: 250px;
+  object-fit: cover;
+  margin-right: 25px;
+  margin-left: 1rem;
+  cursor: pointer;
+}
+.profile-show {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.profile-image {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.profile-show td {
+  font-size: 1rem;
+  padding: 8px 16px 8px 16px;
+  border-bottom: solid 1px #cccccc;
+}
+.ryo {
+  margin-bottom: 100px;
+}
+@media (max-width: 840px) {
+  .about-page-image {
+    width: 300px;
+    height: 200px;
+  }
+}
+@media (max-width: 600px) {
+  #about p {
+    margin-bottom: 60px;
+    margin-right: 1rem;
+  }
+  .about-card-style {
+    display: block;
+  }
+  .about-card-style p {
+    width: 100%;
+  }
+  .about-page-image {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 /* Archive Pagination Styles */
